--- a/Desafios/modulo-02/d012/style.css
+++ b/Desafios/modulo-02/d012/style.css
@@ -1,9 +1,19 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Iceland&display=swap');
+
+/*@import url('https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap');*/
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Iceland", cursive;
+    --fonte3: "Pinyon Script", cursive;
+}
+
 * {
-  
    margin: 0px;
    padding: 0px;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
@@ -11,56 +21,67 @@ header {
     background-color: black;
     text-align: center;
     color: white;
-    
     width: wv;
     
-     }
-     header h1 {
-        background-color: black;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        font-size: 10vw;
-        padding: 10px 0px;
-     }
+    }
+
+    header h1 {
+    background-color: black;
+    font-family: var(--fonte2);
+    font-size: 10vw;
+    padding: 10px 0px;
+    /* text-transform: uppercase;/* transforma texto em letras maiusculas */
+    font-variant: small-caps; /* usa o desenho das letras maiusculas ma usa o tamanho de letras minusculas */
+    }
      header p {
         background-color: black;
      }
-     a {
+     header a, footer a{
         color: white;
         font-size: 1.5em;
         background-color: black;
         text-decoration: none;
         padding: 0px 5px;
      }
-     a:hover {
+     /* neste caso poderia somennte indicar a pois nao existem links no body */
+
+     header a:hover, footer a:hover {
         text-decoration: underline;
      }
      main {
-        text-align: center;
-        font-family: cursive;
+        text-align: left;
         font-style: oblique;
-        line-height: 6vw;
-        font-size: 4vw;
+        line-height: 8vw;
+        font-size: 6vw;
        
         
      }
-     div.branco >p{
+     
+     div.branco >p {
+         font-family: var(--fonte3);
         background-color: white;
         padding: 80px 30px;
         text-shadow: rgb(104, 98, 98) 1px 1px 0px;
-     
-     }
+    }
+
      div.imagem {
+        
         padding: 80px 30px;
-        text-align: center;
+        text-align: left;
         background-position: right center; 
-       
+        box-shadow: inset 6px 6px 12px 0px rgba(0, 0, 0, 0.589);
+        background-attachment: fixed;
      }
 
      div.imagem >p{
+         font-family: var(--fonte3);
         background-color: rgba(0, 0, 0, 0.151);
         padding-left: 5px;
         border: 1px none black;
-        width: 55vw;
+    /*    width:60vw;*/
+    /*automaticamente ajusta ao tamaho necessario */
+        display: inline-block;
+        padding: 5px;
         color: white;
         text-shadow: black 3px 3px 5px;
          margin: auto;
@@ -68,10 +89,12 @@ header {
 
      div#flor {
         background-image: url(imagens/background001.jpg);
+        background-size: cover;
      }
 
      div#papel {
         background-image: url(imagens/background002.jpg);
+        background-size: cover;
      }
      footer {
         background-color: black;
