coracao animal - pag apoiadores

--- a/coracaoanimal/style.css
+++ b/coracaoanimal/style.css
@@ -1,26 +1,44 @@
 @charset "UFT-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+
 * {
     
-    --cor1: #ff1493;
-    --cor2: #f573d9;
-    --cor3: #e6c5d6;
-    --cor4: #e4d060;
+    --cor1: #ec1b6f;
+    --cor2: #ffd6e6;
+    --cor3: #fcf8f0;
+    --cor4: #ec8e00;
+    --cor5: #4285f4;
+    --cor6: #76b24c;
 
+    --fonte1: "Red Hat Display", cursive, arial, sans-serif;
+ 
     margin: 0px;
     padding: 0px;
+    
+}
+
+body {
+    background-color: var(--cor3);
+    font-family: var(--fonte1);
 }
 
 header {
    background-color: var(--cor1);
    height: 120px;
-   width: 100vw;
+   width: 99.9vw;
    color: white;
-   
 }
-header h1, header h2{
+header h1{
     text-align: center;
     padding-top: 10px;
+}
+header h2{
+    text-align: center;
+   margin: -25px 40vw 0px 40vw;
+}
+header nav {
+    padding-left: 60vw;
 }
 header nav a {
     float: right;
@@ -28,25 +46,24 @@ header nav a {
     margin-right: 25px;
     background-color: var(--cor2);
     padding: 5px 5px;
-    color: white;
+    color: var(--cor1);
     text-decoration: none;
     border-radius: 15px;
     transition-duration: 0.5s;
     box-shadow: rgba(0, 0, 0, 0.527) 1px 1px 3px;
 }
 header nav a:hover {
-    color: var(--cor1);
+    color: black;
     background-color: var(--cor3);
 }
 
+
 main {
-    background-color: var(--cor3);
     list-style-position: inside;
 }
 div.subtitulo {
     text-align: center;
-    padding: 5vh 0px;
-    
+    padding: 3vh 0px;
 }
 div.subtitulo img {
     display: inline-block;
@@ -58,11 +75,11 @@ div.subtitulo h1 {
     text-transform: uppercase;
     background-color: var(--cor1);
     color: white;
-    padding: 1vh 2vw;
+    padding: 0.5vh 2vw;
     border-radius: 30px;
     max-width: 800px;
     min-width: 400px;
-    font-size: 1.5em;
+    font-size: 1.3em;
     display: inline-block;
 }
 
@@ -72,7 +89,7 @@ div.empresas_apoiadoras {
     background-color: white;
     border: 1px solid var(--cor4);
     border-radius: 10px;
-    margin: 10px 20vw 50px 20vw;
+    margin: 5px 20vw 35px 20vw;
     width: 60vw;
     display: inline-block;
     text-align: center;
@@ -83,15 +100,19 @@ div.empresas_apoiadoras > img {
 
 
 div.apoiadores{
-    padding: 50px 1vw 50px 5vw;
+    padding: 25px 1vw 25px 5vw;
     background-color: black;
     color: white;
+    width: 93.9vw;
+}
+div.apoiadores  h1{
+    padding-bottom: 20px;
+    text-align: center;
 }
 div.apoiadores > ul {
-    columns: 4;
+    columns: 3;
 }
 div.apoiadores > ul li {
     list-style-type: "\2B50\00A0\00A0";
     padding-bottom: 5px;
-    text-indent: -5px;
 }
